crates/aranya-policy-lang/tests/data/match_expression/expression_not_assigned.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Syntax error
  |
  = note:  --> 4:13
            |
          4 |             :true
            |             ^---
            |
            = expected identifier, action_call, publish_statement, let_statement, check_statement, match_statement, if_statement, finish_statement, map_statement, create_statement, update_statement, delete_statement, emit_statement, return_statement, or debug_assert
